# ROVI1E18_FinalProject

./: .gitignore  README.md
Analysis/: ROVI1.m  ROVI_fast1_Q.txt  ROVI_fast1_tool.txt  ROVI_fast3_Q.txt  ROVI_fast3_tool.txt  ROVI_medium1_Q.txt  ROVI_medium1_tool.txt  ROVI_medium3_Q.txt  ROVI_medium3_tool.txt  ROVI_slow1_Q.txt  ROVI_slow1_tool.txt  ROVI_slow3_Q.txt  ROVI_slow3_tool.txt
Analysis/Figures/: dataFast1pt.fig  dataFast3pt.fig  dataMedium1pt.fig  dataMedium3pt.fig  dataSlow1pt.fig  dataSlow3pt.fig
Plugin/SamplePluginPA10/: CMakeLists.txt
Plugin/SamplePluginPA10/src/: FeatureExtraction.cpp  FeatureExtraction.hpp  SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  Tracking.cpp  Tracking.h  Tracking.hpp
Robotic/: CMakeLists.txt
Robotic/src/: Tracking.cpp  Tracking.h  Tracking.hpp  main.cpp
Vision/: CMakeLists.txt
Vision/src/: FeatureExtraction.cpp  FeatureExtraction.hpp  test_marker1.cpp  test_marker3.cpp
